# pyinvoke-comparison-example

./: .gitignore  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tasks.py  test_requirements.txt  tox.ini
arbpackage/: version.py
ops/: bump.yaml
ops_invoke/: README.rst
tests/unit/: version_test.py
