[bumpversion]
current_version = 0.0.10

[metadata]
name = arbpackage
author = The Author
author_email = author@arb-example.arb
summary = Arbritrary package to play with to test tools to build it (such as pypyr)
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/pypyr/pypyr-to-invoke-comparison-example
project_urls = 
	Bug Tracker = https://github.com/pypyr/pypyr-to-invoke-comparison-example/issues
	Documentation = https://github.com/pypyr/pypyr-to-invoke-comparison-example
	Source Code = https://github.com/pypyr/pypyr-to-invoke-comparison-example
license = Apache License 2.0
classifier = 
	Development Status :: 3 - Alpha
	
	Intended Audience :: Developers
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	
	License :: OSI Approved :: Apache Software License
	
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = 
	arb
	keyword
	pypyr
	invoke

[entry_points]
console_scripts = 
	arbpackage = arbpackage.version:get_version

[bdist_wheel]
universal = 0

[coverage:report]
exclude_lines = 
	pragma: no cover
	if 0:
	if __name__ == .__main__.:
fail_under = 100

[coverage:run]
branch = True

[flake8]
exclude = .git,__pycache__,.tox,*.egg,build,data,dist,.cache,.env
